--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "burger",
+  "name": "AXIOMaker",
   "version": "1.0.0",
   "description": "app which utilizes express, handlebars, mysql",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yamalik95/burger.git"
+    "url": "git+https://github.com/yamalik95/AXIOMaker.git"
   },
   "author": "Yash Malik",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/yamalik95/burger/issues"
+    "url": "https://github.com/yamalik95/AXIOMaker/issues"
   },
-  "homepage": "https://github.com/yamalik95/burger#readme",
+  "homepage": "https://github.com/yamalik95/AXIOMaker#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
