added path module

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
     "mysql": "^2.15.0",
+    "path": "^0.12.7",
     "serve-favicon": "^2.4.5"
   }
 }
